--- a/src/components/HeaderSignUp/HeaderSignUp.module.scss
+++ b/src/components/HeaderSignUp/HeaderSignUp.module.scss
@@ -5,7 +5,7 @@
   align-items: center;
   max-width: 1200px;
   height: 130px;
-  background-color: coral
+  background-color: coral;
 }
 
 .linkHeaderSignUp {
