--- a/src/components/HeaderSignIn/HeaderSignIn.module.scss
+++ b/src/components/HeaderSignIn/HeaderSignIn.module.scss
@@ -4,8 +4,7 @@
   justify-content: space-between;
   align-items: center;
   max-width: 1200px;
-  height: 130px;
-  background-color: coral;
+  min-width: 1000px;
 }
 
 .linkHeaderSignIn {
@@ -14,4 +13,10 @@
   padding: 12px 20px;
   font-weight: 700;
   text-decoration: none;
+}
+
+
+
+.padding {
+  padding-top: 50px;
 }
