--- a/src/components/forms/Input/Input.module.scss
+++ b/src/components/forms/Input/Input.module.scss
@@ -1,4 +1,5 @@
 .input {
+  position: relative;
   padding: 5px 10px;
   border: 1px solid grey;
 }
@@ -9,4 +10,12 @@
 
 .errorInput {
   border-color: red;
+}
+
+.errorMessage {
+  border: 2px solid red;
+  padding: 8px 72px;
+  position: absolute;
+  top: 317px;
+  left: 710px;
 }
