--- a/src/pages/SignIn/SignIn.module.scss
+++ b/src/pages/SignIn/SignIn.module.scss
@@ -2,4 +2,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+}
+
+.headingSignInPage {
+  padding-top: 80px;
+  color: white;
+  text-transform: uppercase;
 }
