--- a/src/components/forms/SignInForm/SignInForm.module.scss
+++ b/src/components/forms/SignInForm/SignInForm.module.scss
@@ -15,8 +15,8 @@
 
 .fieldLoginStyleSignIn {
   width: 500px;
-  height: 50px;
   padding: 24px;
   background-color: #28d2d0;
   color: white;
+  border: none;
 }
