--- a/src/components/forms/SignInForm/SignInForm.module.scss
+++ b/src/components/forms/SignInForm/SignInForm.module.scss
@@ -2,15 +2,15 @@
   display: flex;
   flex-direction: column;
   max-width: 800px;
-  .inputStyleSignIn {
-    margin-bottom: 38px;
-  }
+  // .inputStyleSignIn {
+  //   margin-bottom: 38px;
+  // }
 }
 
-.inputStyleSignIn {
-  width: 500px;
-  padding: 24px;
-}
+// .inputStyleSignIn {
+//   width: 500px;
+//   padding: 24px;
+// }
 
 .fieldLoginStyleSignIn {
   width: 500px;
