--- a/src/components/forms/SignInForm/SignInForm.module.scss
+++ b/src/components/forms/SignInForm/SignInForm.module.scss
@@ -2,15 +2,7 @@
   display: flex;
   flex-direction: column;
   max-width: 800px;
-  // .inputStyleSignIn {
-  //   margin-bottom: 38px;
-  // }
 }
-
-// .inputStyleSignIn {
-//   width: 500px;
-//   padding: 24px;
-// }
 
 .fieldLoginStyleSignIn {
   width: 500px;
@@ -18,4 +10,5 @@
   background-color: #28d2d0;
   color: white;
   border: none;
+  outline: none;
 }
