--- a/src/components/forms/SignInForm/SignInForm.module.scss
+++ b/src/components/forms/SignInForm/SignInForm.module.scss
@@ -1,3 +1,5 @@
+@import '../../../common/styles/breakpoints';
+
 .formSignIn {
   display: flex;
   flex-direction: column;
@@ -5,10 +7,12 @@
 }
 
 .fieldLoginStyleSignIn {
-  width: 500px;
   padding: 24px;
   background-color: #28d2d0;
   color: white;
   border: none;
   outline: none;
+  @media screen and (max-width: $sm) {
+    padding: 20px;
+  }
 }
