--- a/src/pages/SignIn/SignIn.module.scss
+++ b/src/pages/SignIn/SignIn.module.scss
@@ -1,3 +1,5 @@
+@import '../../common/styles/breakpoints';
+
 .containerPageSignIn {
   display: flex;
   flex-direction: column;
@@ -9,4 +11,7 @@
   padding-top: 80px;
   color: white;
   text-transform: uppercase;
+  @media screen and (max-width: $sm) {
+    font-size: 27px;
+  }
 }
