--- a/src/components/forms/SignUpForm/SignUpForm.module.scss
+++ b/src/components/forms/SignUpForm/SignUpForm.module.scss
@@ -1,3 +1,47 @@
+@import '../../../common/styles/breakpoints';
+
 .formSignUp {
-  
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  max-width: 550px;
+  text-align: center;
+
+  @media screen and (max-width: $sm) {
+    flex-direction: column;
+  }
+}
+
+.inputSignUp {
+  min-width: 250px;
+  padding: 24px;
+  outline: none;
+  @media screen and (max-width: $sm) {
+    min-width: 320px;
+  }
+}
+
+.fieldSubmitSignUp {
+  min-width: 516px;
+  padding: 24px;
+  font-size: 14px;
+  font-weight: 600;
+  background-color: #28d2d0;
+  border: none;
+  color: white;
+  @media screen and (max-width: $sm) {
+    min-width: 320px;
+  }
+}
+
+.radioButtonSignUp {
+  border: 2px solid white;
+  max-width: 520px;
+  margin: 16px;
+  padding: 14px;
+  @media screen and (max-width: $sm) {
+    max-width: 320px;
+    margin: 16px 0px;
+    
+  }
 }
